[gd_scene load_steps=2 format=2]

[ext_resource path="res://Level select.gd" type="Script" id=2]

[node name="Level select" type="Node2D"]
position = Vector2( 449, 222 )
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 33.0
margin_bottom = 15.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control"]
margin_right = 40.0
margin_bottom = 14.0
text = "Easy"

[node name="Control2" type="Control" parent="."]
margin_left = 69.0
margin_top = -2.0
margin_right = 130.0
margin_bottom = 16.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control2"]
margin_left = 2.0
margin_top = 3.0
margin_right = 55.0
margin_bottom = 17.0
text = "Medium"

[node name="Control3" type="Control" parent="."]
margin_left = 167.0
margin_top = 1.0
margin_right = 204.0
margin_bottom = 17.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control3"]
margin_right = 40.0
margin_bottom = 14.0
text = "Hard"

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="gui_input" from="Control2" to="." method="_on_Control2_gui_input"]
[connection signal="gui_input" from="Control3" to="." method="_on_Control3_gui_input"]
